2004-01-21  Pavel Pergamenshchik  <pp64@cornell.edu>

	* twisted/protocols/stateful.py: A new way to write protocols!
	Current state is encoded as a pair (func, len). As soon as len
	of data arrives, func is called with that amount of data.  New
	state is returned from func.
	* twisted/test/test_stateful.py: Tests and an example, an
	Int32StringReceiver implementation.

2004-01-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/resource.py: The default render method of Resource
	now supports delegating to methods of the form "render_*" where
	"*" is the HTTP method that was used to make the
	request. Examples: request_GET, request_HEAD, request_CONNECT, and
	so on. This won't break any existing code - when people want to
	use the better API, they can stop overriding 'render' and instead
	override individual render_* methods.

2004-01-13  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/soap.py: Beginning of client SOAP support.

2004-01-10  Andrew Bennetts <spiv@twistedmatrix.com>

	* twisted/protocols/ftp.py: Added support for partial downloads
	and uploads to FTPClient (see the offset parameter of retrieveFile).

2004-01-09  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: Add IMessageCopier interface to allow
	for optimized implementations of message copying.

2004-01-06  Brian Warner  <warner@lothar.com>

	* twisted/internet/default.py (PosixReactorBase.spawnProcess): add
	a 'childFDs' argument which allows the child's file descriptors to
	be arbitrarily mapped to parent FDs or pipes. This allows you to
	set up additional pipes into the child (say for a GPG passphrase
	or separate status information).

	* twisted/internet/process.py (Process): add childFDs, split out
	ProcessReader and ProcessWriter (so that Process itself is no
	longer also reading stdout).

	* twisted/internet/protocol.py (ProcessProtocol): add new
	childDataReceived and childConnectionLost methods, which default